--- a/HMS-Team3-SwiftApp/Base.lproj/Main.storyboard
+++ b/HMS-Team3-SwiftApp/Base.lproj/Main.storyboard
@@ -22,10 +22,10 @@
             </objects>
             <point key="canvasLocation" x="1747" y="69"/>
         </scene>
-        <!--LoginViewController-->
+        <!--OnboardingNavigationController-->
         <scene sceneID="Ba3-aD-gv8">
             <objects>
-                <viewControllerPlaceholder storyboardIdentifier="LoginViewController" storyboardName="LoginStoryboard" referencedIdentifier="LoginViewController" id="RsO-7c-G2B" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardIdentifier="OnboardingNavigationController" storyboardName="OnboardingStoryboard" referencedIdentifier="OnboardingNavigationController" id="RsO-7c-G2B" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="zQ5-D3-hOk"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DLM-0a-wXN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
