--- a/HMS-Team3-SwiftApp/Storybords/PatientStoryboards/PatientProfileStoryboard.storyboard
+++ b/HMS-Team3-SwiftApp/Storybords/PatientStoryboards/PatientProfileStoryboard.storyboard
@@ -42,8 +42,8 @@
                 <navigationController storyboardIdentifier="PatientProfileNavigationViewController" id="AFC-Xy-Yjw" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Profile" image="person.circle" catalog="system" id="4DO-5F-edS"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Lut-yX-EwP">
-                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="Lut-yX-EwP">
+                        <rect key="frame" x="0.0" y="59" width="393" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
