--- a/HMS-Team3-SwiftApp/Storybords/Base.lproj/Main.storyboard
+++ b/HMS-Team3-SwiftApp/Storybords/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_72" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -40,6 +41,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" name="secondary"/>
+                        <color key="selectedImageTintColor" name="secondary"/>
                     </tabBar>
                     <connections>
                         <segue destination="OFU-JC-Zps" kind="relationship" relationship="viewControllers" id="HwC-pu-YnS"/>
@@ -56,7 +59,7 @@
         <scene sceneID="pYY-bO-d6c">
             <objects>
                 <viewControllerPlaceholder storyboardIdentifier="DiscoverNavigationViewController" storyboardName="DiscoverStoryboard" referencedIdentifier="DiscoverNavigationViewController" id="OFU-JC-Zps" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Discover" image="globe.asia.australia" catalog="system" id="4Aj-HV-u6k"/>
+                    <tabBarItem key="tabBarItem" title="Home" image="house" catalog="system" id="4Aj-HV-u6k"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fWe-wH-mlA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -95,8 +98,11 @@
     </scenes>
     <resources>
         <image name="books.vertical" catalog="system" width="128" height="107"/>
-        <image name="globe.asia.australia" catalog="system" width="128" height="123"/>
+        <image name="house" catalog="system" width="128" height="104"/>
         <image name="person.circle" catalog="system" width="128" height="123"/>
         <image name="person.wave.2" catalog="system" width="128" height="118"/>
+        <namedColor name="secondary">
+            <color red="0.043137254901960784" green="0.68235294117647061" blue="0.62352941176470589" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
