--- a/HMS-Team3-SwiftApp/Storybords/PatientStoryboards/RecordsStoryboard.storyboard
+++ b/HMS-Team3-SwiftApp/Storybords/PatientStoryboards/RecordsStoryboard.storyboard
@@ -43,6 +43,9 @@
                                     <segment title="Lab Reports"/>
                                     <segment title="Appointments"/>
                                 </segments>
+                                <connections>
+                                    <action selector="segmentedControl:" destination="eym-vj-PEo" eventType="valueChanged" id="5YJ-6t-uDr"/>
+                                </connections>
                             </segmentedControl>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Eba-l7-ZRO">
                                 <rect key="frame" x="24" y="169" width="345" height="580"/>
@@ -69,6 +72,7 @@
                                                                 </label>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="stethoscope" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="xPe-3e-gAW" userLabel="Icon image">
                                                                     <rect key="frame" x="0.0" y="20.666666666666664" width="80" height="29.666666666666664"/>
+                                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 </imageView>
                                                             </subviews>
@@ -134,11 +138,12 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="iconImage" destination="xPe-3e-gAW" id="jQg-MA-brj"/>
                                             <outlet property="iconLabel" destination="pOk-Pb-f4b" id="dMh-jz-ZkD"/>
                                             <outlet property="prescribedByLabel" destination="fgv-Oi-KWf" id="qD0-8t-9VJ"/>
                                             <outlet property="recordDatelLabel" destination="D5I-od-cQm" id="Zlz-fS-UGS"/>
                                             <outlet property="recordsIcon" destination="9At-cn-W10" id="pOG-fR-rAg"/>
-                                            <outlet property="recordsView" destination="9At-cn-W10" id="HDb-UQ-l9A"/>
+                                            <outlet property="recordsView" destination="xPe-3e-gAW" id="geq-nC-eU2"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
