--- a/HMS-Team3-SwiftApp/Storybords/PatientStoryboards/PatientProfileStoryboard.storyboard
+++ b/HMS-Team3-SwiftApp/Storybords/PatientStoryboards/PatientProfileStoryboard.storyboard
@@ -21,10 +21,21 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" id="5v9-30-xTf"/>
+                    <connections>
+                        <segue destination="iLw-qT-lKr" kind="presentation" id="aNX-0e-fOy"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JPa-8t-1cf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1742.7480916030534" y="-283.0985915492958"/>
+            <point key="canvasLocation" x="1758" y="-283"/>
+        </scene>
+        <!--MedicalHistoryViewController-->
+        <scene sceneID="HyS-DM-Huk">
+            <objects>
+                <viewControllerPlaceholder storyboardIdentifier="MedicalHistoryViewController" storyboardName="PatientProfileMedicalHistory" referencedIdentifier="MedicalHistoryViewController" id="iLw-qT-lKr" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WXA-6i-jiy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3270" y="-166"/>
         </scene>
         <!--Profile-->
         <scene sceneID="1hE-nk-wDh">
@@ -43,6 +54,7 @@
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7AV-P3-neN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            
             </objects>
             <point key="canvasLocation" x="816.03053435114498" y="-283.0985915492958"/>
         </scene>
