--- a/HMS-Team3-SwiftApp/Storybords/PatientStoryboards/RecordsStoryboard.storyboard
+++ b/HMS-Team3-SwiftApp/Storybords/PatientStoryboards/RecordsStoryboard.storyboard
@@ -47,12 +47,12 @@
                                     <action selector="segmentedControl:" destination="eym-vj-PEo" eventType="valueChanged" id="5YJ-6t-uDr"/>
                                 </connections>
                             </segmentedControl>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Eba-l7-ZRO">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Eba-l7-ZRO">
                                 <rect key="frame" x="24" y="169" width="345" height="580"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="recordsTableCell" rowHeight="80" id="TDP-dD-1E6" customClass="RecordsTableViewCell" customModule="HMS_Team3_SwiftApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="50" width="345" height="80"/>
+                                        <rect key="frame" x="0.0" y="55.333332061767578" width="345" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="TDP-dD-1E6" id="K4H-0B-MHj">
                                             <rect key="frame" x="0.0" y="0.0" width="345" height="80"/>
