--- a/HMS-Team3-SwiftApp/Storybords/Base.lproj/Main.storyboard
+++ b/HMS-Team3-SwiftApp/Storybords/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="aHJ-hL-gpy">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Ezk-H9-CAV">
     <device id="retina6_72" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -23,10 +24,10 @@
             </objects>
             <point key="canvasLocation" x="1747" y="69"/>
         </scene>
-        <!--OnboardingNavigationController-->
+        <!--LoginViewController-->
         <scene sceneID="Ba3-aD-gv8">
             <objects>
-                <viewControllerPlaceholder storyboardIdentifier="OnboardingNavigationController" storyboardName="OnboardingStoryboard" referencedIdentifier="OnboardingNavigationController" id="RsO-7c-G2B" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardIdentifier="LoginViewController" storyboardName="LoginStoryboard" referencedIdentifier="LoginViewController" id="RsO-7c-G2B" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="zQ5-D3-hOk"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DLM-0a-wXN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
